Project Meetup_Clone {
    database_type: 'PostgresSQL'
}

Table group_event_types {
    id int [pk, increment]
    type varchar
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table images {
    id int [pk, increment]
    url text
    preview boolean
}
Table users {
    id int [pk, increment]
    first_name varchar
    last_name varchar
    email text
    username varchar
    token varchar
    password varchar
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}


Table groups {
    id int [pk, increment]
    organizer_id int [ref: < users.id]
    name text
    about text
    type_id int [ref: < group_event_types.id]
    private boolean
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table locatons as Venues {
    id int [pk, increment]
    group_id int [ref: < groups.id]
    address text
    city text
    state varchar
    lat varchar
    long varchar
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table events {
    group_id int [ref: <> groups.id]
    venue_id int [ref: > locatons.id]
    id int [pk, increment]
    name text
    description text
    type_id int [ref: < group_event_types.id]
    capacity int
    price decemial
    startDate datetime
    endDate datetime
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}